# stapel-calendar

./: CHANGELOG.md  CONFIG.MD  MODULE.md  Makefile  README.md  __init__.py  _capabilities.py  _codegen.py  _codegen_settings.py  actions.py  admin.py  apps.py  checks.py  codegen_urls.py  conf.py  conftest.py  dto.py  errors.py  functions.py  gdpr.py  ics.py  models.py  pyproject.toml  recurrence.py  reminders.py  scope.py  serializers.py  services.py  signals.py  urls.py  urls_v1.py  views.py
.github/workflows/: ci.yml  publish.yml
docs/: capabilities.json  capabilities.meta.json  schema.json
migrations/: 0001_initial.py  0002_recurrence_id.py
schemas/consumes/: user.deleted.json
schemas/emits/: calendar.event.reminder_due.json  calendar.occurrence.materialized.json
schemas/functions/: calendar.free_busy.json
tests/: test_api.py  test_availability.py  test_checks.py  test_comm.py  test_contract.py  test_gdpr.py  test_ics.py  test_materialize.py  test_public_api.py  test_recurrence.py  test_review_hardening.py  test_rsvp_and_reminders.py  test_scope.py  test_update_and_participants.py  urls.py
