[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "stapel-calendar"
version = "0.3.6"
description = "Calendar and scheduling for the Stapel framework"
readme = "README.md"
license = { text = "MIT" }
requires-python = ">=3.11"
keywords = ["django", "stapel", "calendar"]
classifiers = [
    "Development Status :: 4 - Beta",
    "Framework :: Django",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
    "Programming Language :: Python :: 3 :: Only",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Typing :: Typed",
]
dependencies = [
    "stapel-core>=0.10,<0.13",
    "python-dateutil>=2.8,<3",
]

[project.urls]
Homepage = "https://github.com/usestapel/stapel-calendar"
Repository = "https://github.com/usestapel/stapel-calendar"
Documentation = "https://github.com/usestapel/stapel-calendar#readme"
Changelog = "https://github.com/usestapel/stapel-calendar/blob/main/CHANGELOG.md"
Issues = "https://github.com/usestapel/stapel-calendar/issues"

[project.optional-dependencies]
all = []

[tool.setuptools]
package-dir = {"stapel_calendar" = "."}
packages = ["stapel_calendar", "stapel_calendar.migrations"]

[tool.setuptools.package-data]
stapel_calendar = ["py.typed", "migrations/*.py", "schemas/**/*.json"]

[tool.ruff]
target-version = "py311"

[tool.ruff.lint]
# Single source for the git hooks and CI (they pass the same flags on the CLI).
select = ["E", "F", "W"]
ignore = ["E501"]

[tool.pytest.ini_options]
django_find_project = false
addopts = "--tb=short -q --import-mode=importlib"

[tool.coverage.run]
omit = [
    "*/tests/*",
    "*/conftest.py",
    "*/migrations/*",
]
